# oki

./: .clangd  .valgrindrc  README.md  meson.build  meson_options.txt  oki.c  shell.nix
include/: defines.h.in  entry.h  game_types.h  meson.build
include/containers/: darray.h
include/core/: application.h  asserts.h  clock.h  event.h  input.h  kmemory.h  kstring.h  logger.h
include/platform/: platform.h
src/: meson.build  test.c
src/containers/: darray.c  meson.build
src/core/: application.c  clock.c  event.c  input.c  kmemory.c  kstring.c  logger.c  meson.build
src/platform/: meson.build  platform_linux.c  platform_linux_wayland.c  platform_linux_wayland.h  platform_linux_x11.c  platform_linux_x11.h  platform_win32.c
src/renderer/: meson.build  renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.h
src/renderer/vulkan/: meson.build  vulkan_backend.c  vulkan_backend.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_fence.h  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_platform.h  vulkan_render_pass.c  vulkan_render_pass.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.h  vulkan_utils.c  vulkan_utils.h
testbed/src/: entry.c  game.c  game.h  main.c  meson.build
