option(
  'log_level',
  type : 'combo',
  choices : ['error', 'warn', 'info', 'debug', 'trace'],
  value : 'trace',
  description : 'Maximum log level'
)
option(
  'assertions',
  type : 'boolean',
  value : true,
  description : 'Enable assertions'
)
option(
  'wayland',
  type : 'feature',
  value : 'auto',
  description : 'Build with wayland backend support (Linux only)'
)
option(
  'x11',
  type : 'feature',
  value : 'auto',
  description : 'Build with x11 backend support (Linux only)'
)
